@@ -15,6 +15,9 @@ Release 2.1.1-beta - UNRELEASED
 
     HDFS-5104 Support dotdot name in NFS LOOKUP operation (brandonli)
 
+    HDFS-5107 Fix array copy error in Readdir and Readdirplus responses
+    (brandonli)
+
   IMPROVEMENTS
 
   OPTIMIZATIONS
